--- a/Ortoped.csproj
+++ b/Ortoped.csproj
@@ -36,7 +36,7 @@
     <ManifestCertificateThumbprint>BC8A86E15144499632F2903A86F928BC4792D038</ManifestCertificateThumbprint>
     <ManifestKeyFile>Ortoped_TemporaryKey.pfx</ManifestKeyFile>
     <GenerateManifests>false</GenerateManifests>
-    <TargetZone>LocalIntranet</TargetZone>
+    <TargetZone>Internet</TargetZone>
     <SignManifests>false</SignManifests>
     <IsWebBootstrapper>true</IsWebBootstrapper>
     <SignAssembly>false</SignAssembly>
@@ -60,6 +60,7 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <FodyPath>packages\Fody.1.13.6.1</FodyPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\Debug\</OutputPath>
@@ -125,6 +126,7 @@
     <Reference Include="System.Data">
       <Name>System.Data</Name>
     </Reference>
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing">
       <Name>System.Drawing</Name>
     </Reference>
@@ -160,6 +162,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Definitions\AidDefinitions.cs" />
+    <Compile Include="frmSendSms.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSendSms.Designer.cs">
+      <DependentUpon>frmSendSms.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HelpClasses\SMSFunctions.cs" />
     <Compile Include="Service References\ProductionService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -170,7 +179,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="Thord\ThordHelpClasses\Class1.cs" />
+    <Compile Include="Thord\ThordHelpClasses\InspectorInserter.cs" />
     <Compile Include="Thord\ThordHelpClasses\PasswordDigestBehavior.cs" />
     <Compile Include="Thord\ThordHelpClasses\PasswordDigestMessageInspector.cs" />
     <Compile Include="Web References\se.sll.thord.www\Reference.cs">
@@ -185,6 +194,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Icons\App.ico" />
+    <None Include="Resources\sms.png" />
     <None Include="Resources\gear.png" />
     <None Include="Resources\gear.ico" />
     <None Include="Service References\ProductionService\Ortoped.ProductionService.ProductionAidDTO.datasource">
@@ -600,6 +610,9 @@
       <DependentUpon>frmOwnFee.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmSendSms.resx">
+      <DependentUpon>frmSendSms.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmSettings.resx">
       <SubType>Designer</SubType>
       <DependentUpon>frmSettings.cs</DependentUpon>
@@ -683,6 +696,10 @@
     <ProjectReference Include="..\KeyboardSpyDll\KeyboardSpyDll.csproj">
       <Project>{D82FCD01-11A7-4AFF-9623-DA451803A35A}</Project>
       <Name>KeyboardSpyDll</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SMS_Avvisering\ErrandsEntity\ErrandsEntity.csproj">
+      <Project>{fe6dc6f7-2abb-48a2-8fcc-2d6d255260f5}</Project>
+      <Name>ErrandsEntity</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
